# ratatui-gamepad-tester

./: .gitattributes  CHANGELOG.md  Cargo.toml  Justfile  README.md  prek.toml
.github/workflows/: ci.yaml  release.yaml
media/: demo.avif
src/: app.rs  gamepad.rs  main.rs
