[package]
name = "ratatui-gamepad-tester"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
gilrs = "0.11"
color-eyre = "0.6"
tui-widgets = { version = "0.7", default-features = false, features = ["big-text"] }
uuid = { version = "1", default-features = false }

[lints.clippy]
single_match = "allow"
