[package]
name = "ratatui-gamepad-tester"
description = "a TUI app for visualizing gamepad input"
license = "GPL-3.0-or-later"
repository = "https://github.com/sermuns/ratatui-gamepad-tester"
version = "0.1.1"
edition = "2024"

[dependencies]
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
gilrs = "0.11"
color-eyre = "0.6"
tui-widgets = { version = "0.7", default-features = false, features = ["big-text"] }
uuid = { version = "1", default-features = false }

[lints.clippy]
single_match = "allow"
